--- a/MicrositeTemplate_EditForTWL.html
+++ b/MicrositeTemplate_EditForTWL.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="format-detection" content="telephone=no">
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-<title>BandQ</title>
+<title>Pathways Template Example for TWL</title>
 <style type="text/css">
 body{-webkit-text-size-adjust:none;}
 .ReadMsgBody{width:100%;}
