--- a/MicrositeTemplate_EditForTWL.html
+++ b/MicrositeTemplate_EditForTWL.html
@@ -202,7 +202,7 @@ body{-webkit-text-size-adjust:none;}
 
 				*[id]#MMGContainer #hotspot_01_btn.hotspot:after{                
 					 top:10px;
-					 content:"Weightligting";
+					 content:"Weightlifting";
 					 padding:10px;
 					 display:inline-block;                         
 				}
